refactor: 优化语言检测和重定向逻辑，合并语言检测脚本
- 删除冗余的language-redirect.js文件，合并功能到language-detector.js
- 更新.htaccess文件，确保/en路径的正确重定向
- 移除index.html和en/index.html中的冗余语言切换逻辑，简化代码结构
- 更新sitemap.xml中的URL路径，确保/en/路径的一致性
- 优化script.js中的语言切换和重定向逻辑，减少重复代码

--- a/.htaccess
+++ b/.htaccess
@@ -5,8 +5,12 @@ RewriteEngine On
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# Remove trailing slashes
+# Ensure /en redirects to /en/
+RewriteRule ^en$ /en/ [L,R=301]
+
+# Remove trailing slashes (except for directories and /en/)
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !^/en/$
 RewriteRule ^(.*)/$ /$1 [L,R=301]
 
 # Redirect www to non-www for both domains
@@ -44,4 +48,12 @@ AddDefaultCharset UTF-8
   <FilesMatch "\.(html|htm|php)$">
     Header append Vary Accept-Language
   </FilesMatch>
+</IfModule>
+
+# Security headers
+<IfModule mod_headers.c>
+  Header set X-Content-Type-Options "nosniff"
+  Header set X-XSS-Protection "1; mode=block"
+  Header set X-Frame-Options "SAMEORIGIN"
+  Header set Referrer-Policy "strict-origin-when-cross-origin"
 </IfModule>
